plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.techfork'
version = '0.0.1-SNAPSHOT'
description = '주요 테크 블로그를 수집하고 제공하는 통합 플랫폼'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "1.0.3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	runtimeOnly 'com.mysql:mysql-connector-j'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

	// Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	testImplementation 'org.springframework.batch:spring-batch-test'

	// RSS Parsing
	implementation 'com.rometools:rome:2.1.0'
	implementation 'com.rometools:rome-modules:2.1.0'

	//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//	implementation 'org.springframework.boot:spring-boot-starter-security'
	//	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	//	implementation 'org.springframework.ai:spring-ai-advisors-vector-store'
	//	implementation 'org.springframework.ai:spring-ai-starter-vector-store-elasticsearch'

	implementation 'org.springframework.ai:spring-ai-anthropic'
	implementation 'org.springframework.ai:spring-ai-openai'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
